# ugv-perception-pipeline

./: .gitignore  README.md
ros2_ws/src/perception_pipeline/: package.xml  setup.py
ros2_ws/src/perception_pipeline/launch/: perception.launch.py
ros2_ws/src/perception_pipeline/perception_pipeline/: camera_publisher_node.py  yolo_detector_node.py
